--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "cookie-parser": "^1.4.6",
     "ms": "^2.1.3",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.0"
+    "rxjs": "^7.8.0",
+    "sharp": "^0.32.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.1.4",
