--- a/package.json
+++ b/package.json
@@ -36,19 +36,29 @@
     "url": "https://github.com/HitomiViewer/backend/issues"
   },
   "dependencies": {
+    "@adminjs/express": "^5.1.0",
+    "@adminjs/nestjs": "^5.1.1",
+    "@adminjs/typeorm": "^4.0.0",
     "@nestjs/axios": "^2.0.0",
     "@nestjs/common": "^9.3.12",
     "@nestjs/config": "^2.3.1",
     "@nestjs/core": "^9.3.12",
     "@nestjs/platform-express": "^9.1.4",
     "@nestjs/swagger": "^6.1.2",
+    "@nestjs/typeorm": "^10.0.0",
+    "@tiptap/pm": "^2.0.3",
+    "adminjs": "^6.8.7",
     "axios": "^1.3.4",
     "cache-manager": "^5.2.0",
     "cookie-parser": "^1.4.6",
+    "express-formidable": "^1.2.0",
+    "express-session": "^1.17.3",
     "ms": "^2.1.3",
+    "mysql": "^2.18.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
-    "sharp": "^0.32.1"
+    "sharp": "^0.32.1",
+    "typeorm": "^0.3.17"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.1.4",
