--- a/package.json
+++ b/package.json
@@ -43,18 +43,27 @@
     "@nestjs/common": "^9.3.12",
     "@nestjs/config": "^2.3.1",
     "@nestjs/core": "^9.3.12",
+    "@nestjs/jwt": "^10.1.0",
+    "@nestjs/passport": "^10.0.0",
     "@nestjs/platform-express": "^9.1.4",
     "@nestjs/swagger": "^6.1.2",
     "@nestjs/typeorm": "^10.0.0",
     "@tiptap/pm": "^2.0.3",
     "adminjs": "^6.8.7",
     "axios": "^1.3.4",
+    "bcrypt": "^5.1.0",
     "cache-manager": "^5.2.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "cookie-parser": "^1.4.6",
     "express-formidable": "^1.2.0",
     "express-session": "^1.17.3",
+    "jsonwebtoken": "^9.0.1",
     "ms": "^2.1.3",
     "mysql": "^2.18.1",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
     "sharp": "^0.32.1",
@@ -64,11 +73,16 @@
     "@nestjs/cli": "^9.1.4",
     "@nestjs/schematics": "^9.0.3",
     "@nestjs/testing": "^9.3.12",
+    "@types/bcrypt": "^5.0.0",
     "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.14",
     "@types/jest": "^29.5.0",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/ms": "^0.7.31",
     "@types/node": "^18.8.3",
+    "@types/passport": "^1.0.12",
+    "@types/passport-jwt": "^3.0.9",
+    "@types/passport-local": "^1.0.35",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.39.0",
     "@typescript-eslint/parser": "^5.39.0",
