--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
     "sharp": "^0.32.1",
+    "socks-proxy-agent": "^8.0.2",
     "typeorm": "^0.3.17"
   },
   "devDependencies": {
